Refactor preloader implementation and enhance performance; remove critical image preloading and scroll handling scripts

--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -5888,6 +5888,9 @@ figcaption {
   inset: 0%;
   overflow: hidden;
 }
+.preloader-hidden {
+  display: none;
+}
 
 .preloader-content {
   grid-column-gap: 24px;
