--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -9,7 +9,7 @@ body {
 }
       
         /* Apply the text-transition class to all common text elements */
-p, h1, h2, h3, h4, h5, h6, span, a {
+p, h1, h2, h3, h4, h5, h6, span {
   transition: opacity 0.5s ease, transform 0.5s ease;
   opacity: 0;
   transform: translateY(20px);
