--- a/css/webflow-style.css
+++ b/css/webflow-style.css
@@ -4765,10 +4765,19 @@ figcaption {
 }
 
 .category-list {
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem;
-  flex-wrap: wrap;
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: nowrap;
+
+}
+
+@media screen and (max-width: 768px) {
+  .category-list {
+    flex-wrap: wrap;
+  }
 }
 
 .tag-wrapper {
